# arva-backend

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
controllers/: cart_controller.py  category_controller.py  discount_controller.py  image_product_controller.py  orderItem_controller.py  order_controller.py  product_controller.py  rating_controller.py  shop_controllers.py  tag_controller.py  tag_product_controller.py  user_controllers.py  variant_controller.py  voucher_controller.py  wishlist_controller.py
migrations/versions/: 0263cd414265_fix_error.py  0b8c6fbe58a6_fix_db_error.py  17fd4314a69e_add_wishlist_table2.py  1836f1383d32_add_vocher_table.py  318ca571578a_remove_unique_product_variant_name.py  4aacf01491af_fix_eror_in_back_populates.py  581b626819c4_add_image_variant_table.py  59ee782130ca_add_voucher_table.py  5e0dfb5004fd_add_product_table2.py  5fd728098b78_add_productshop_table.py  875eac04a1bc_remove_unique_discount_name.py  8b8c05bc9461_delete_category_product_table.py  95d597d1e320_add_image_variant_table2.py  973d4b14b959_add_product_table.py  98821e83410e_change_column_variant3.py  9914deacdf2c_change_column_variant.py  a30ee71f600c_add_cart_and_rating_table.py  a83b67e30264_add_discount_order_orderitem_table.py  a9ab3ebaf88e_add_user_name_column.py  a9c83643fa62_add_tag_product_table3.py  adc4fdff019f_inisial_migrate.py  (+6 more)
models/: cart.py  category.py  category_product.py  discount.py  image_product.py  order.py  order_item.py  products.py  rating.py  shops.py  tag_product.py  tags.py  users.py  variant.py  voucher.py  wishlist.py
