[tool.poetry]
name = "revou-fsse-5-group-final-project-group-b"
version = "0.1.0"
description = ""
authors = ["regaruzianto <regaruzianto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
sqlalchemy = "^2.0.36"
python-dotenv = "^1.0.1"
supabase = "^2.10.0"
psycopg2 = "^2.9.10"
flask-jwt-extended = "^4.7.1"
bcrypt = "^4.2.1"
flask-migrate = "^4.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
